<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1108dp"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".MainActivity">

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="1098dp"
        android:layout_height="1108dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-46dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/group_23"
        android:layout_width="251.03dp"
        android:layout_height="236.1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="@drawable/vector23" />

    <TextView
        android:id="@+id/ways_to_cal"
        android:layout_width="503dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="28dp"
        android:gravity="top"
        android:text="@string/ways_to_cal"
        android:textAppearance="@style/ways_to_cal" />
    <!-- YOUR NERVES -->
    <TextView
        android:id="@+id/your_nerves"
        android:layout_width="842dp"
        android:layout_height="165dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="85.53dp"
        android:gravity="top"
        android:text="@string/your_nerves"
        android:textAppearance="@style/your_nerves"
        android:textSize="100sp" />
    <!-- BEFORE PRESENTATION -->
    <TextView
        android:id="@+id/before_pres"
        android:layout_width="539dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="312dp"
        android:layout_marginTop="236dp"
        android:gravity="top"
        android:text="@string/before_pres"
        android:textAppearance="@style/before_pres" />
    <!-- Group 24 -->
    <View
        android:id="@+id/group_24"
        android:layout_width="284.89dp"
        android:layout_height="261.52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="908.81dp"
        android:layout_marginTop="213.87dp"
        android:alpha="0.8"
        android:background="@drawable/ic_group_24" />

    <!-- Group 25 -->
    <View
        android:id="@+id/group_25"
        android:layout_width="55.3dp"
        android:layout_height="58.94dp"
        android:layout_marginLeft="972.94dp"
        android:layout_marginTop="880dp"
        android:background="@drawable/ic_vector__2_" />

    <View
        android:layout_width="56dp"
        android:layout_height="59dp"
        android:layout_below="@+id/group_25"
        android:layout_alignBottom="@+id/rectangle_13"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="972.94dp"
        android:layout_toEndOf="@+id/rectangle_13"
        android:background="@drawable/ic_vector__2_" />
    <!-- Rectangle 7 -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rectangle_7"
        android:layout_width="362dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="514dp"
        android:layout_marginTop="366dp"
        android:background="@drawable/ic_rectangle_7">

        <TextView
            android:id="@+id/come_early_"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="top"
            android:text="@string/come_early_"
            android:textAppearance="@style/come_early_" />

    </RelativeLayout>
    <!-- Rectangle 11 -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rectangle_1"
        android:layout_width="362dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="654dp"
        android:layout_marginTop="536dp"
        android:background="@drawable/ic_rectangle_7"

        >

        <TextView
            android:id="@+id/take_deep_b"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/take_deep_b"
            android:textAppearance="@style/take_deep_b" />

    </RelativeLayout>
    <!-- Rectangle 12 -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rectangle_12"
        android:layout_width="392dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="560dp"
        android:layout_marginTop="708dp"
        android:background="@drawable/ic_rectangle_7">

        <TextView
            android:id="@+id/make_your_h"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/make_your_h"
            android:textAppearance="@style/make_your_h" />

    </RelativeLayout>
    <!-- Rectangle 13 -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rectangle_13"
        android:layout_width="477dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="482dp"
        android:layout_marginTop="874dp"
        android:background="@drawable/ic_rectangle_7">

        <TextView
            android:id="@+id/know_inside"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/know_inside"
            android:textAppearance="@style/know_inside" />

    </RelativeLayout>
    <!-- Component 1 -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/component_1"
        android:layout_width="443dp"
        android:layout_height="567dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="503dp"
        android:layout_marginTop="401dp"
        android:background="@drawable/component_1" />
    <!-- Frame -->
    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="496dp"
        android:layout_height="496dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="347dp"
        android:background="@drawable/frame"
        android:clipToOutline="true" />
    <!-- Group 22 -->
    <ImageView
        android:id="@+id/group_22"
        android:layout_width="455.41dp"
        android:layout_height="973.04dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="410dp"
        android:background="#00000000"
        android:src="@drawable/group_22" />

    <!-- Vector -->
    <View
        android:id="@+id/vector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vector"
        android:visibility="gone" />

    <!-- Vector -->
    <View
        android:id="@+id/vector2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vector2"
        android:visibility="gone" />

    <View
        android:id="@+id/vector3"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vector3"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/vector4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vector4"
        android:visibility="gone" />


</RelativeLayout>